# Speedtest-Automated

./: .gitignore  AGENTS.md  Makefile  README.md  analyse_ping.bat  analyse_ping.sh  analyse_results.bat  analyse_results.sh  analyse_results_dash.bat  iPerfGraph.py  main.py  pyperftest.py  pyproject.toml  requirements.txt  speedtest.py
.github/workflows/: ci.yml
tests/: test_analysis.py  test_database.py  test_speedtest_auto.py
tools/: analyse_results.py  analysis.py  dash_app.py  iPerfGraph.py  migrate_csv.py  migrate_to_sessions.py  ping_dash_app.py  plotlygraph.py
wrappers/: __init__.py  database.py  iperf3_auto.py  speedtest_auto.py  tr-143.py  tr143.py  utils.py
